[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heatmiser-exporter"
version = "0.1.0"
description = "Prometheus exporter for the IMI Heatmiser NeoHub API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Hypercat", email = "github@hypercat.net" }]
dependencies = [
    "heatmiser-neohub>=0.1.3",
    "prometheus_client>=0.25.0",
    "python-dotenv>=1.2.0",
    "typer>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
heatmiser-exporter = "heatmiser_exporter.main:main"

[project.urls]
Homepage = "https://github.com/hypercat-net/heatmiser-exporter"
Documentation = "https://hypercat-net.github.io/heatmiser-exporter/"
Repository = "https://github.com/hypercat-net/heatmiser-exporter"
Issues = "https://github.com/hypercat-net/heatmiser-exporter/issues"

# Optional: local sibling checkout for development with uv.
[tool.uv.sources]
heatmiser-neohub = { path = "../heatmiser-neohub", editable = true }

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
